{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5071a7f1-80a6-4744-87dd-4680e1cbd0fc",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "867632bb-15d3-4fe6-ac41-c168d337947d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "PassThrough",
                    "id": "1a63e355-edbd-4ea0-9a10-850f5446e430",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "9de66438-5468-45f0-a78f-c92b286103ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "260233f6-e23c-4e8e-957e-fbb3e5b32e35",
                    "path": "<Touchscreen>/position",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "103c98b0-5239-488d-9483-69a2c1cb117a",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2af8e8b-f07d-440b-b77e-36e1b2ad0b64",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}